Testing the data structure with the default key in the property files

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -4,6 +4,8 @@ default:
     properties:
     sectionTitle: Showcase
   homePageSectionsOrder: [description, showcase, realtor, contact]
+  
 siteName:
-  - lp-bayrentals
   - lp-showcase
+  - lp-bestbuys
+  - lp-bayrentals
