--- a/home/data.yaml
+++ b/home/data.yaml
@@ -4,7 +4,17 @@ default:
     properties:
     sectionTitle: Showcase
   homePageSectionsOrder: [description, showcase, realtor, contact]
-  
+siteOverrides:
+  lp-bayrentals:
+    showcase:
+      menu: Bayrentals
+      properties:
+      sectionTitle: Bayrentals
+  lp-bestbuys:
+    showcase:
+      menu: Bestbuys
+      properties:
+      sectionTitle: Bestbuys
 siteName:
   - lp-showcase
   - lp-bestbuys
