--- a/home/data.yaml
+++ b/home/data.yaml
@@ -1,8 +1,17 @@
 showcase:
-  menu: Showcase
+  menu: 
   properties:
   sectionTitle: Showcase
-homePageSectionsOrder: [ showcase, realtor]
+realtor:
+  photo: images/praveen.jpg
+  company: Broker & Owner, WebERealty
+  id: "CA BRE License #: 01928307"
+  phone: "925-452-7483"
+  logo: images/YHSG-Final.png
+  menu: Realtor1
+chatbot:
+  enable: false
+homePageSectionsOrder: [ showcase, contact , realtor]
 siteSpecific:
   lp-bayrentals:
     showcase:
