Changing data for testing

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -31,7 +31,7 @@ footertext:
   line1: "Information courtesy of Praveen Kumar 01928307 @ WebERealty"
   line2: "12935 Alcosta Blvd. #3681, San Ramon ,California, 94583"
   line3: "praveen@weberealty.com"
-propertyPageSectionsOrder: [ priceAndFeatures, virtualTour ]
+propertyPageSectionsOrder: [ priceAndFeatures, virtualTour, vivek ]
 siteSpecific:
   lp-bayrentals:
       priceAndFeatures:
