--- a/111/data.yaml
+++ b/111/data.yaml
@@ -26,12 +26,33 @@ homePageData:
   price: ''
   listingPageURL: 
 chatbot:
-  enable: true
+  enable: false
 footertext:
   line1: "Information courtesy of Praveen Kumar 01928307 @ WebERealty"
   line2: "12935 Alcosta Blvd. #3681, San Ramon ,California, 94583"
   line3: "praveen@weberealty.com"
-propertyPageSectionsOrder: [ priceAndFeatures, virtualTour ]
+description:
+  content: >
+     ## Welcome to this massively upgraded, Northeast facing home on a corner lot.
+
+     * Walking distance to the top rated Hidden Hills Elementary. 
+
+     * Granite kitchen with pantry open to the family room with cozy fireplace and built-in audio cabinet.
+
+     * Separate living room for quiet time away from the TV. 
+
+     * Master suite with dual sinks, walk in closet and soaking tub. 
+
+     * Upgrades include flooring, custom window treatments
+
+     * 15 solar panels that are owned for extra capacity for electric car
+
+     * Water softening system and extensive built ins in the garage.
+
+     * Low maintenance yard with stamped concrete, .artificial turf and attractive foliage for shade and privacy.
+
+     * [Schedule Appointment](javascript:openModal('https://calendly.com/yourhomesoldguaranteed/tour-2120ndonovanway-sanramon'))
+propertyPageSectionsOrder: [ priceAndFeatures, virtualTour, realtor, description ]
 siteSpecific:
   lp-bayrentals:
       priceAndFeatures:
