--- a/global/data.yaml
+++ b/global/data.yaml
@@ -7,7 +7,7 @@ realtor:
   phone: "925-452-7483"
   logo: images/YHSG-Final.png
   menu: Realtor
-  sectionTitle: Get Instant Alerts on Coming Soon listings and homes NOT available online.
+  sectionTitle: Get12 Instant Alerts on Coming Soon listings and homes NOT available online.
 footertext:
   line1: Information courtesy of Praveen Kumar 01928307 @ WebERealty
   line2: "12935 Alcosta Blvd. #3681, San Ramon ,California, 94583"
@@ -27,14 +27,15 @@ contact:
       z: 10000
     pageType: lp
 siteSpecific:
-  lp-showcase:
-    realtor:
-      photo: images/praveen.jpg
-      name: Vivek
   lp-bayrentals:
     realtor:
       photo: images/praveen.jpg
       name: Vivek
+      company: Broker & Owner, WebERealty
+      id: "CA BRE License #: 01928307"
+      phone: "925-452-7483"
+      logo: images/YHSG-Final.png
+      menu: Realtor
+      sectionTitle: Get12 Instant Alerts on Coming Soon listings and homes NOT available online.
 siteName: 
-  - lp-showcase
   - lp-bayrentals
