changing data for testing - 1

--- a/global/data.yaml
+++ b/global/data.yaml
@@ -39,3 +39,5 @@ siteSpecific:
       sectionTitle: Get12 Instant Alerts on Coming Soon listings and homes NOT available online.
 siteName: 
   - lp-bayrentals
+  - lp-showcase
+  - lp-bestbuys
