--- a/111/data.yaml
+++ b/111/data.yaml
@@ -57,10 +57,10 @@ description:
      * [Schedule Appointment](javascript:openModal('https://calendly.com/yourhomesoldguaranteed/tour-2120ndonovanway-sanramon'))
 propertyPageSectionsOrder: [ priceAndFeatures, virtualTour, video, realtor, description ]
 siteSpecific:
-  lp-bayrentals:
+  lp-showcase:
     virtualTour:
       title: 'Vivek'
       matterportID: "XF9HmuP3iE2&mls=2&brand=0&hr=0&gt=0&dh=0&help=2&qs=1&title=0&portal=0"
       menu: 'Virtual Tour1'
 siteName:
-  - lp-bayrentals
+  - lp-showcase
