Updated data file for testing - 3

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -4,7 +4,7 @@ showcase:
   sectionTitle: Showcase
 chatbot:
   enable: true
-homePageSectionsOrder: [ showcase ]
+homePageSectionsOrder: [ showcase, realtor, contact ]
 siteSpecific:
 siteName:
   - lp-showcase
