--- a/global/data.yaml
+++ b/global/data.yaml
@@ -16,6 +16,7 @@ page:
   title: Praveen Kumar - Your Home Sold Guaranteed.
 contact:
   menu: Contact
+  sectionTitle: Contact
   mauticForm:
     formSetName: "showcase"
     emailFormHeader: "Access COMING SOON houses for SALE:"
