Changing data for testing

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -52,7 +52,7 @@ description:
      * Low maintenance yard with stamped concrete, .artificial turf and attractive foliage for shade and privacy.
 
      * [Schedule Appointment](javascript:openModal('https://calendly.com/yourhomesoldguaranteed/tour-2120ndonovanway-sanramon'))
-propertyPageSectionsOrder: [ priceAndFeatures, virtualTour, realtor, description ]
+propertyPageSectionsOrder: "price"
 siteSpecific:
 siteName:
   - lp-showcase
