Updated property file and home data file based on the errors logged

--- a/98-835-654/data.yaml
+++ b/98-835-654/data.yaml
@@ -29,4 +29,4 @@ homePageData:
   bedsAndBaths: ''
   price: ''
   listingPageURL:
-propertyPageSectionsOrder: [priceAndFeatures, description, contact, virtualTour, realtor]  
+propertyPageSectionsOrder: [priceAndFeatures, contact, realtor]  
