--- a/home/data.yaml
+++ b/home/data.yaml
@@ -4,4 +4,4 @@ showcase:
   menu: Showcase
   properties:
   sectionTitle: Showcase
-homePageSectionsOrder: [description, showcase, contact, realtor]
+homePageSectionsOrder: [showcase, contact, realtor]
