--- a/111/data.yaml
+++ b/111/data.yaml
@@ -27,7 +27,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/PLAN_1_IMG_01-Home.jpg
+  url: PLAN_1_IMG_01-Home.jpg
   addressLine1: 'Tracy Hills Residence-1'
   addressLine2: ''
   bedsAndBaths: ''
