--- a/208-820-060/data.yaml
+++ b/208-820-060/data.yaml
@@ -23,7 +23,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/01-Living-Room.jpg
+  url: 01-Living-Room.jpg
   addressLine1: 'Panoramic sunrise in San Ramon!'
   addressLine2: ''
   bedsAndBaths: '4 bedroom 3 bath, 2,456 sq.ft on 7,570 sq.ft lot, HOA is $180/month.'
