--- a/333/data.yaml
+++ b/333/data.yaml
@@ -27,7 +27,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/PLAN3IMG01-Home.jpg
+  url: PLAN3IMG01-Home.jpg
   addressLine1: 'Tracy Hills Residence-3'
   addressLine2: ''
   bedsAndBaths: ''
