--- a/39622/data.yaml
+++ b/39622/data.yaml
@@ -21,7 +21,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/A01-LivingRoom-576x324.jpg
+  url: A01-LivingRoom-576x324.jpg
   addressLine1: 'Delightful duet-style townhome in Fremont - Pending!'
   addressLine2: ''
   bedsAndBaths: ''
