--- a/444/data.yaml
+++ b/444/data.yaml
@@ -27,7 +27,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/PLAN4IMG01-Home.jpg
+  url: PLAN4IMG01-Home.jpg
   addressLine1: 'Tracy Hills Residence-4'
   addressLine2: ''
   bedsAndBaths: ''
