--- a/507-20-48/data.yaml
+++ b/507-20-48/data.yaml
@@ -26,7 +26,7 @@ showcase:
   url:
   menu: Showcase
 homePageData:
-  url: images/32_225314.jpg
+  url: 32_225314.jpg
   addressLine1: Niles Canyon Fremont Townhome - SOLD!
   addressLine2: ''
   bedsAndBaths: ''
