--- a/543-470-17/data.yaml
+++ b/543-470-17/data.yaml
@@ -27,7 +27,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/Ardenwood-1-Kitchen.jpg
+  url: Ardenwood-1-Kitchen.jpg
   addressLine1: 'Luxurious Living Ardenwood Fremont - SOLD!'
   addressLine2: ''
   bedsAndBaths: ''
