--- a/222/data.yaml
+++ b/222/data.yaml
@@ -27,7 +27,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/PLAN_2_IMG_01-Home.jpg
+  url: PLAN_2_IMG_01-Home.jpg
   addressLine1: 'Tracy Hills Residence-2'
   addressLine2: ''
   bedsAndBaths: ''
