--- a/223-200-022/data.yaml
+++ b/223-200-022/data.yaml
@@ -23,7 +23,7 @@ showcase:
   url: 
   menu: Showcase
 homePageData:
-  url: images/01-Kitchen-Nook-Living.jpg
+  url: 01-Kitchen-Nook-Living.jpg
   addressLine1: 'Awesome San Ramon Home'
   addressLine2: ''
   bedsAndBaths: '3 Bedroom, 2 full & 1 partial bath. 1646 sq.ft on 4011 sq.ft lot. Built in 2003'
