Updating the data according to the errors.json created during the build

--- a/224-280-019-000/data.yaml
+++ b/224-280-019-000/data.yaml
@@ -43,4 +43,4 @@ realtor:
     footerLink: 'https://propertymanage.biz/apps/application_occupants.php?listing_id=59429758&u='
 page:
   title: 'Brand New Home for RENT in Merced'   
-propertyPageSectionsOrder: [virtualTour, priceAndFeatures, description, photos, video, contact, realtor]
+propertyPageSectionsOrder: [virtualTour, priceAndFeatures, description, photos, contact, realtor]
