--- a/224-280-023-000/data.yaml
+++ b/224-280-023-000/data.yaml
@@ -47,4 +47,4 @@ realtor:
     footerLink: 'https://propertymanage.biz/apps/application_occupants.php?listing_id=59445968&u='
 page:
   title: 'Home for RENT in Merced'   
-propertyPageSectionsOrder: [virtualTour, priceAndFeatures, description, photos, video, contact, realtor]
+propertyPageSectionsOrder: [virtualTour, priceAndFeatures, description, photos, contact, realtor]
