Testing siteName validation

--- a/008-261-018-9/data.yaml
+++ b/008-261-018-9/data.yaml
@@ -1,6 +1,5 @@
 ---
-siteName:
-  - lp-bestbuys
+siteName: lp-showcase
 propertyPageSectionsOrder: [priceAndFeatures, virtualTour, photos, contact, realtor]
 home:
   menu: Home
