Testing error logging

--- a/008-261-018-9/data.yaml
+++ b/008-261-018-9/data.yaml
@@ -1,7 +1,7 @@
 ---
 siteName:
   - lp-bestbuys
-propertyPageSectionsOrder: [priceAndFeatures, virtualTour, photos, contact, realtor]
+propertyPageSectionsOrder: "Vivek"
 home:
   menu: Home
 virtualTour:
@@ -11,15 +11,15 @@ virtualTour:
 priceAndFeatures:
   title1: Discovery Bay, CA 94505
   title2: "$874,900"
-  beds: 4 Beds
-  baths: 3 Baths
-  homeType: Single Family Residence
+  beds: 3
+  baths: 3
+  homeType: 3
   sqft: Building 2455 sq.ft on 7,320 sq.ft lot
   yearBuilt: 'Year Built: 1987'
   price: 'HOA: $160'
   menu: Price & Features
 photos:
-  menu: Photos
+  menu: Photos  
 homePageData:
   url: discovery_bay.jpg
   addressLine1: 'Elegant Discovery Bay Single Family Home!'
