Enabled chatbot for testing

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -7,6 +7,8 @@ showcase:
   properties:
   sectionTitle: Showcase
 homePageSectionsOrder: [showcase, contact, realtor]
+chatbot:
+  enable: true
 siteSpecific:
   lp-bestbuys:
     showcase:
