Updating 111 for showcase property functionality testing

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -24,7 +24,6 @@ virtualTour:
   matterportID: XF9HmuP3iE2&mls=2&brand=0&hr=0&gt=0&dh=0&help=2&qs=1&title=0&portal=0
   menu: Virtual Tour
 showcase:
-  url: 
   menu: Showcase
 homePageData:
   url: PLAN_1_IMG_01-Home.jpg
@@ -35,7 +34,7 @@ homePageData:
   listingPageURL:
 chatbot:
   enable: true
-  chatbotDFAgent: 'vivek'
+  chatbotDFAgent: ''
 contact:
   menu: Contact
   mauticForm:
