--- a/111/data.yaml
+++ b/111/data.yaml
@@ -23,7 +23,7 @@ virtualTour:
   title: 'Tracy Hills Residence-1'
   matterportID: XF9HmuP3iE2&mls=2&brand=0&hr=0&gt=0&dh=0&help=2&qs=1&title=0&portal=0
   menu: Virtual Tour
-showcase:
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: PLAN_1_IMG_01-Home.jpg
