Changed showcase to homePageNavigation for all the data files

--- a/172-190-022/data.yaml
+++ b/172-190-022/data.yaml
@@ -19,8 +19,7 @@ photos:
 video:
   youtubeVideoID: dvpLvbMNk40
   menu: Video
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: Walnut-Creek-Home-near-BART.jpg
