--- a/32-345-654/data.yaml
+++ b/32-345-654/data.yaml
@@ -19,8 +19,7 @@ photos:
 video:
   youtubeVideoID: s6nIXXw4Ons
   menu: Video
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: a0-576x324-34228Northwind2020-12-07-16h48m22s151.jpg
