--- a/41-935-654/data.yaml
+++ b/41-935-654/data.yaml
@@ -19,8 +19,7 @@ photos:
 video:
   youtubeVideoID: hwQnmiIKjPs
   menu: Video
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: a0-34157Donahue2020-12-07-12h10m41s905.jpg
