--- a/88-7618-894/data.yaml
+++ b/88-7618-894/data.yaml
@@ -23,8 +23,7 @@ virtualTour:
   title: Fremont, CA 94536
   matterportID: AquafMTVuqx
   menu: Virtual Tour
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: A01-Fremont-Blvd-Townhome-Living-Room-576x324.jpg
