--- a/98-835-654/data.yaml
+++ b/98-835-654/data.yaml
@@ -19,8 +19,7 @@ photos:
 video:
   youtubeVideoID: qxWvpSkVY_8
   menu: Video
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: b4-576x32434343Tupelo2020-12-15-20h14m45s682.jpg
