--- a/15-725-654/data.yaml
+++ b/15-725-654/data.yaml
@@ -23,8 +23,7 @@ virtualTour:
   title: '5553 Via Lugano, Fremont, CA, 94555'
   matterportID: F2PBfhBuFjK&help=0&hl=2&brand=0&hr=0&mls=2&title=0&pin=0&portal=0
   menu: Virtual Tour
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: a4-576x324_5553ViaLugano2020-12-09-17h56m09s258.jpg
