--- a/333/data.yaml
+++ b/333/data.yaml
@@ -23,8 +23,7 @@ virtualTour:
   title: 'Tracy Hills Residence-3'
   matterportID: 3yWf7GPATaa&mls=2&brand=0&hr=0&gt=0&dh=0&help=2&qs=1&title=0&portal=0
   menu: Virtual Tour
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: PLAN3IMG01-Home.jpg
