--- a/444/data.yaml
+++ b/444/data.yaml
@@ -23,8 +23,7 @@ virtualTour:
   title: 'Tracy Hills Residence-4'
   matterportID: cRdhqTMC6wH&mls=2&brand=0&hr=0&gt=0&dh=0&help=2&qs=1&title=0&portal=0
   menu: Virtual Tour
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: PLAN4IMG01-Home.jpg
