--- a/543-471-265/data.yaml
+++ b/543-471-265/data.yaml
@@ -23,8 +23,7 @@ virtualTour:
   title: 34122 Asti Ter, Fremont, CA 94555
   matterportID: rd3zAUfdjeX
   menu: Virtual Tour
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: 31_34122AstiTerraceFremontCa9455509152020_185857_mls.jpg
