--- a/57-645-654/data.yaml
+++ b/57-645-654/data.yaml
@@ -23,8 +23,7 @@ virtualTour:
   title: '5190 Tacoma Cmn Fremont, CA 94555'
   matterportID: PHsLSdLoAxU&help=0&hl=2&brand=0&hr=0&mls=2&title=0&pin=0&portal=0
   menu: Virtual Tour
-showcase:
-  url: 
+homePageNavigation:
   menu: Showcase
 homePageData:
   url: a0-576x3245190Tacoma2020-12-09-17h47m11s675.jpg
