--- a/222/data.yaml
+++ b/222/data.yaml
@@ -14,6 +14,7 @@ priceAndFeatures:
   yearBuilt: 'Year Built: 2021'
   price: 'HOA: $77/mo'
   menu: Price & Features
+propertyPageSectionsOrder: [priceAndFeatures, virtualTour, contact, realtor]
 photos:
   menu: Photos
 video:
