Testing code refactoring changes related to global data and section orders

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -7,7 +7,7 @@ showcase:
   menu: Showcase
   properties:
   sectionTitle: Showcase
-homePageSectionsOrder: [showcase, contact, realtor]
+homePageSectionsOrder: [showcase]
 chatbot:
   enable: true
   chatbotDFAgent: 'default'
