--- a/home/data.yaml
+++ b/home/data.yaml
@@ -7,6 +7,7 @@ showcase:
   menu: Showcase
   properties:
   sectionTitle: Showcase
+homePageSectionsOrder: []
 chatbot:
   enable: true
   chatbotDFAgent: 'default'
