Testing code refactoring changes related to propertyPageSectionsOrder

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -7,7 +7,7 @@ showcase:
   menu: Showcase
   properties:
   sectionTitle: Showcase
-homePageSectionsOrder: []
+homePageSectionsOrder: [showcase, contact, realtor]
 chatbot:
   enable: true
   chatbotDFAgent: 'default'
