--- a/home/data.yaml
+++ b/home/data.yaml
@@ -11,6 +11,15 @@ homePageSectionsOrder: [showcase, contact, realtor]
 chatbot:
   enable: true
   chatbotDFAgent: 'default'
+realtor:
+  photo: praveen.jpg
+  name: Vivek
+  company: Broker & Owner, WebERealty
+  id: "CA BRE License #: 01928307"
+  phone: "925-452-7483"
+  logo: YHSG-Final.png
+  menu: Realtor
+  sectionTitle: Get Instant Alerts on Coming Soon listings and homes NOT available online.
 siteSpecific:
   lp-bestbuys:
     showcase:
